kratos-keto-oathkeeper-k8s/fake-smtp-server/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-smtp-server-admin
  namespace: default
  labels:
    app.kubernetes.io/name: fake-smtp-server
spec:
  type: ClusterIP
  ports:
    - port: 4437
      targetPort: http-mail-admin
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fake-smtp-server
