kratos-keto-oathkeeper-k8s/fake-smtp-server/service-smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-smtp
  namespace: default
  labels:
    app.kubernetes.io/name: fake-smtp-server
spec:
  type: ClusterIP
  ports:
    - port: 1025
      targetPort: smtp
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fake-smtp-server
