kratos-keto-oathkeeper-k8s/fake-smtp-server/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-smtp-server-ui
  namespace: default
  labels:
    app.kubernetes.io/name: fake-smtp-server
spec:
  type: ClusterIP
  ports:
    - port: 4436
      targetPort: http-mail-ui
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fake-smtp-server
